--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -29,7 +29,7 @@ RUN cp /opt/conda/lib/libpython3.10.so.1.0 /usr/lib/x86_64-linux-gnu/
 
 RUN set -x \
     && : "setup vall-e library" \
-    && git clone --branch main https://github.com/Dmitriial/vall-e-lifeiteng.git /opt/valle \
+    && git clone --branch example https://github.com/Dmitriial/vall-e-lifeiteng.git /opt/valle \
     && cd /opt/valle \
     && git checkout 93c7d5923d4eb5e468a65bf1d0a5df7dfbe643d8 \
     pip install -e .
